--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1289,12 +1289,9 @@ float: left;
 }
 
 .CodeReview_TabBox4 .CodeReview_img {
-  height: 3300px;
-  background-image: url(./BackImg/TaemSiteImg.jpg);
-}
-.CodeReview_TabBox5 .CodeReview_img {
-  height: 3300px;
-  background-image: url(./BackImg/TaemSiteImg.jpg);
+  height: 2830px;
+  background-image: url(./BackImg/4.ReactSite/React_Page.jpg);
+  background-size: 96.5%;
 }
 
 .CodeReview_TabBox_Btn {
