--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1055,7 +1055,7 @@ float: left;
   position: absolute;
   z-index: 4;
   opacity: 0;
-  bottom: 13px;
+  bottom: 14px;
   left: 320px;
   width: 350px;
   height: 40px;
@@ -1196,7 +1196,7 @@ float: left;
 }
 .LoginMain,
 .LoginSearch {
-  margin-top: 80px;
+  margin-top: 0px;
 }
 
 
@@ -1289,7 +1289,7 @@ float: left;
 }
 
 .CodeReview_TabBox4 .CodeReview_img {
-  height: 2830px;
+  height: 2990px;
   background-image: url(./BackImg/4.ReactSite/React_Page.jpg);
   background-size: 96.5%;
 }
@@ -1840,7 +1840,27 @@ label[for="CodeBtn13"]:hover {
 /* ======================================================================= */
 /* ======================================================================= */
 /* 리액트프로젝트 */
+.REACT_Swiper1 .swiper-slide:nth-child(1) {background-image: url(./BackImg/CodeImg/10.React_Swiper/Swiper1.jpg);}
+.REACT_Swiper1 .swiper-slide:nth-child(2) {background-image: url(./BackImg/CodeImg/10.React_Swiper/Swiper2.jpg);}
 
+
+
+
+.REACT_Swiper2 .swiper-slide:nth-child(1) {background-image: url(./BackImg/CodeImg/11.React_DataPush/DataPush1.jpg);}
+.REACT_Swiper2 .swiper-slide:nth-child(2) {background-image: url(./BackImg/CodeImg/11.React_DataPush/DataPush2.jpg);}
+.REACT_Swiper2 .swiper-slide:nth-child(3) {background-image: url(./BackImg/CodeImg/11.React_DataPush/DataPush3.jpg);}
+.REACT_Swiper2 .swiper-slide:nth-child(4) {background-image: url(./BackImg/CodeImg/11.React_DataPush/DataPush4.jpg);}
+
+
+
+.REACT_Swiper3 .swiper-slide:nth-child(1) {background-image: url(./BackImg/CodeImg/12.React_Detail/Detail1.jpg);}
+.REACT_Swiper3 .swiper-slide:nth-child(2) {background-image: url(./BackImg/CodeImg/12.React_Detail/Detail2.jpg);}
+.REACT_Swiper3 .swiper-slide:nth-child(3) {background-image: url(./BackImg/CodeImg/12.React_Detail/Detail3.jpg);}
+
+
+
+.REACT_Swiper4 .swiper-slide:nth-child(1) {background-image: url(./BackImg/CodeImg/13.React_Cart/Cart1.jpg);}
+.REACT_Swiper4 .swiper-slide:nth-child(2) {background-image: url(./BackImg/CodeImg/13.React_Cart/Cart2_Store.jpg);}
 
 
 
